# Sarabhel

./: .gitignore  CLAUDE.md  Despliege_en la web.md  README.md  docker-compose.yml  mik4ela-C2.md  mosquitto.conf
.atl/: .skill-registry.cache.json  skill-registry.md
Agentes/: Agent1.py  agent.py
N8N/: C2-Aligo-N8N.json
Supabase/: supabase.sql
agent/: Dockerfile  agent.py  pyproject.toml
c2-broker/: README.md  docker-compose.yml  mik4ela-C2.md  nube.md  test.py  test_comms.py  test_full.py
c2-broker/bridge/: Dockerfile  bridge.py  requirements.txt
c2-broker/config/: acl.conf  mosquitto.conf
c2-broker/config/certs/: agent.crt  agent.csr  agent.key  bridge.crt  ca.crt  ca.key  ca.srl  server.crt  server.csr  server.key
c2-broker/crypto_lib/: cipher.py  psk.key  test_cipher.py
c2-broker/scripts/: deploy.sh  gen-agent-cert.sh  gen-certs.sh
c2_server/: Dockerfile  pyproject.toml
c2_server/app/: main.py  settings.py
c2_server/app/application/use_cases/: dispatch_command.py  register_agent.py  store_result.py  update_heartbeat.py
c2_server/app/domain/: entities.py  enums.py
c2_server/app/infrastructure/: Base.py  di.py  models.py  mqtt_client.py
c2_server/app/infrastructure/repositories/: __init__.py  agent_repository.py  command_repository.py  result_repository.py
c2_server/app/transport/api/: routers.py
cli/: Dockerfile  cli.py  pyproject.toml
common/: __init__.py
crypto-lib/: __init__.py
