[tool.poetry]
name = "c2-server"
version = "0.1.0"
description = "Command & Control server for the lab"
authors = ["Sarabhel Team <team@example.com>"]
packages = [{include = "app", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
paho-mqtt = "^2.0.0"
aiomqtt = "^2.3.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
