[tool.poetry]
name = "c2-cli"
version = "0.1.0"
description = "Operator CLI for the C2 lab"
authors = ["Sarabhel Team <team@example.com>"]
packages = [{include = "cli"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.0"
requests = "^2.31.0"
paho-mqtt = "^2.0.0"
tabulate = "^0.9.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"